exports[`backgroundImages should generate a multiple backgroundImages from multiple parameters 1`] = `
Object {
  "backgroundImage": "url(\"/image/background.jpg\"), linear-gradient(red, green)",
}
`;

exports[`backgroundImages should generate a single background from a parameter 1`] = `
Object {
  "backgroundImage": "url(\"/image/background.jpg\")",
}
`;
